[package]
name = "hubcaps-asset-upload"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]

[dependencies]
hubcaps = { git = "https://github.com/badboy/hubcaps/", branch = "newer-syntex", version = "0.2.1" }
hyper = "0.8.0"
serde = "0.7"
serde_json = "0.7"
url = "0.5"
uritemplate = "0.1.1"
mime = "0.2.0"
env_logger = "0.3.0"
